fixed break in text habits page

--- a/public/css/habits.css
+++ b/public/css/habits.css
@@ -297,6 +297,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 150%;
+    width: 70% !important;
+    display: inline-block;
  }
 
  input {
